--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <p align="center">
          <h3>HALLO🤗</h3>
-         <input type="button" href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" class="btn btn-danger" value="UNDUH 66M"/>
+         <button href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" value="UNDUH 66M"/>
     </p>
 </body>
 </html>
