--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
     <title>download minimilitia</title>
 </head>
 <body>
-    <p align="center">
-         <h3>HALLO🤗</h3>
-         <button href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" value="UNDUH 66M"/>
-    </p>
+<h3>HALLO🤗</h3>
+<a href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/">
+<button class="button">Download 66m</button></a>
 </body>
+<style>
+button{
+font-family: sans-serif;
+font-size: 15px;
+background: #22a4cf;
+color: white;
+border: white 3px solid;
+border-radius: 5px;
+padding: 12px 20px;
+margin-top: 10px;
+}
+
+button:hover{
+opacity:0.9;
+}
+</style>
 </html>
