--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h3>HALLO🤗</h3>
-<a href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/">
+<a href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" target="">
 <button class="button">Download 66m</button></a>
 </body>
 <style>
