--- a/index.html
+++ b/index.html
@@ -4,23 +4,6 @@
 </head>
 <body>
 <h3>HALLO🤗</h3>
-<a href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" target="">
-<button class="button">Download 66m</button></a>
-</body>
-<style>
-button{
-font-family: sans-serif;
-font-size: 15px;
-background: #22a4cf;
-color: white;
-border: white 3px solid;
-border-radius: 5px;
-padding: 12px 20px;
-margin-top: 10px;
-}
+<a href="https://drive.google.com/file/d/1MfL7oYyXwr971wjjMiRkIE90YozdjWN6/" target=""> <h1>download</h1></a>
 
-button:hover{
-opacity:0.9;
-}
-</style>
 </html>
